tests/baselines/reference/derivedStructWithoutExplicitConstructor.errors.txt
tests/cases/conformance/structs/constructorDeclarations/automaticConstructors/derivedStructWithoutExplicitConstructor.ts(15,9): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/structs/constructorDeclarations/automaticConstructors/derivedStructWithoutExplicitConstructor.ts (1 errors) ====
    // doc 3.3
    // In a derived struct, the automatic constructor has the same parameter list
    // (and possibly overloads) as the base struct constructor.
    
    struct Base {
        a = 1;
        constructor(x: number) { this.a = x; }
    }
    
    struct Derived extends Base {
        x = 1
        y = 'hello';
    }
    
    var r = new Derived(); // error, Supplied parameters do not match any signature of call target
            ~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    var r2 = new Derived(1); 
    
    /* struct Base2<T> {
        a: T;
        constructor(x: T) { this.a = x; }
    }
    
    struct D<T extends Date> extends Base2<T> {
        x = 2
        y: T = null;
    }
    
    var d = new D(); // error, Supplied parameters do not match any signature of call target
    var d2 = new D(new Date()); // ok
    */